Add sentiment analysis result

--- a/Reddit_scraping.ipynb
+++ b/Reddit_scraping.ipynb
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "3adc3b18",
+   "id": "e90efdab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "03de285e",
+   "id": "4fcb0210",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "08c65d03",
+   "id": "e82e6214",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "cfa69d88",
+   "id": "6007b8db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "b57c7c2b",
+   "id": "c148dd93",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "0e02a95e",
+   "id": "cc3dc4fd",
    "metadata": {},
    "outputs": [
     {
@@ -1073,6 +1073,8 @@
     }
    ],
    "source": [
+    "# proof text\n",
+    "\n",
     "new_texts = ['This is a positive text.', 'This is a very negative text.', 'This is a neutral text.']\n",
     "result = []\n",
     "for text in new_texts:\n",
@@ -1091,6 +1093,29 @@
     "    else:\n",
     "        result.append(\"Neutral\")\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "dfbb62da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Positive    655\n",
+       "Negative    114\n",
+       "Name: Sentiment, dtype: int64"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"Sentiment\"].value_counts()"
    ]
   }
  ],
