modifica codice rimozione colonne

--- a/Notebook/sistemazioneDF.ipynb
+++ b/Notebook/sistemazioneDF.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "17ae52f9",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "79076e26",
    "metadata": {},
@@ -33,6 +35,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9b1ea182",
    "metadata": {},
@@ -65,6 +68,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "325c68eb",
    "metadata": {},
@@ -154,6 +158,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "19c98d10",
    "metadata": {},
@@ -182,6 +187,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5eca45f1",
    "metadata": {},
@@ -200,6 +206,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f7e0088e",
    "metadata": {},
@@ -231,6 +238,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a146c2d",
    "metadata": {},
@@ -240,53 +248,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0d79ff5d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def dropCols(d):\n",
-    "    col = input('scegli una colonna da droppare (scrivi il nome esatto): ')\n",
+    "    col = input('Scegli una colonna da droppare (inserisci il nome esatto): ')\n",
     "    col = str(col)\n",
+    "    print(col)\n",
+    "    \n",
     "    if col in d.columns:\n",
-    "        print (\"sicuro di voler eliminare la colonna \"+ col+ \"?\")\n",
-    "        ans = input(\"scrivi y o n\")\n",
+    "        print(\"Vuoi davvero eliminare la colonna \" + col + \"?\")\n",
+    "        ans = input(\"inserisci 'y' o 'n': \")\n",
     "        ans = str(ans)\n",
+    "        \n",
     "        if ans == 'y':\n",
-    "            print(\"procedo..\")\n",
-    "            d.drop([col], axis=1)\n",
+    "            d = d.drop(col, axis=1)\n",
+    "            print(\"droppo la colonna...\")\n",
     "        else:\n",
-    "            print(\"non procedo\")\n",
-    "    return d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "620afbed",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "premi 1 per droppare una colonna, 2 per non farlo:  2\n",
-      "fine drop delle colonne\n"
-     ]
-    }
-   ],
-   "source": [
-    "stop = False\n",
-    "while stop is not True:\n",
-    "    q = (int(input(\"premi 1 per droppare una colonna, 2 per non farlo:  \")))\n",
-    "    if q!=2:\n",
-    "        dropCols(data)\n",
+    "            print(\"okay, non droppo la colonna.\")\n",
     "    else:\n",
-    "        stop= True\n",
-    "        print(\"fine drop delle colonne\")"
+    "        print(\"nome di colonna non valido.\")\n",
+    "    \n",
+    "    return d\n",
+    "\n",
+    "stop = False\n",
+    "while not stop:\n",
+    "    q = input(\"inserisci 1 per droppare una colonna, 2 per non farlo: \")\n",
+    "    \n",
+    "    try:\n",
+    "        q = int(q)\n",
+    "        if q == 1 or q == 2:\n",
+    "            print('input corretto')\n",
+    "            \n",
+    "            if q == 1:\n",
+    "                data = dropCols(data)\n",
+    "            else:\n",
+    "                stop = True\n",
+    "                print(\"Fine del processo di eliminazione delle colonne.\")\n",
+    "        else:\n",
+    "            print(\"Input non valido. Inserisci '1' o '2'.\")\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid input. Inserisci '1' or '2'.\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "04dbf428",
    "metadata": {},
@@ -331,6 +339,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f098c2be",
    "metadata": {},
@@ -592,6 +601,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0b13426f",
    "metadata": {},
@@ -637,6 +647,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d5e6f609",
    "metadata": {},
