Update Sentiment analysis - Complete.ipynb

--- a/Notebook/Sentiment analysis - Complete.ipynb
+++ b/Notebook/Sentiment analysis - Complete.ipynb
@@ -679,6 +679,630 @@
     "plt.savefig(\"pie_textblobsentiment-complete.png\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4f329fd",
+   "metadata": {},
+   "source": [
+    "# Words, bigrams and trigrams distribution for positive comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7f529331",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_copy = df.copy()\n",
+    "df = df[df['Sentiment'] == 'pos']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56e8eb29",
+   "metadata": {},
+   "source": [
+    "## Words frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a025c38d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk import FreqDist\n",
+    "\n",
+    "tokens = []\n",
+    "for row in df['Comment']:\n",
+    "    tokens.extend(word_tokenize(str(row).lower()))  # Tokenization and lower conversion of the strings\n",
+    "\n",
+    "word_freq = FreqDist(tokens)\n",
+    "sorted_freq = sorted(word_freq.items(), key = lambda x: x[1], reverse = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "44f237a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ai 9243\n",
+      "like 7411\n",
+      "chatgpt 7077\n",
+      "people 5832\n",
+      "would 5281\n",
+      "dont 4707\n",
+      "good 4599\n",
+      "use 4382\n",
+      "think 4270\n",
+      "im 4213\n",
+      "get 3730\n",
+      "one 3725\n",
+      "even 3575\n",
+      "time 3370\n",
+      "work 3309\n",
+      "make 3286\n",
+      "know 3183\n",
+      "also 3109\n",
+      "could 3040\n",
+      "gpt 3021\n",
+      "thats 2969\n",
+      "way 2966\n",
+      "really 2917\n",
+      "better 2783\n",
+      "much 2646\n",
+      "using 2617\n",
+      "right 2588\n",
+      "something 2527\n",
+      "write 2465\n",
+      "youre 2411\n",
+      "things 2396\n",
+      "see 2286\n",
+      "need 2285\n",
+      "going 2280\n",
+      "well 2263\n",
+      "sure 2214\n",
+      "doesnt 2156\n",
+      "writing 2124\n",
+      "still 2111\n",
+      "used 2097\n",
+      "want 2093\n",
+      "many 2035\n",
+      "say 2013\n",
+      "new 1981\n",
+      "actually 1962\n",
+      "human 1903\n",
+      "cant 1879\n",
+      "first 1871\n",
+      "thing 1841\n",
+      "lol 1776\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 50  # number of frequent words to print\n",
+    "for word, freq in sorted_freq[:N]:\n",
+    "    print(word, freq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cc02815",
+   "metadata": {},
+   "source": [
+    "## Bigrams distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8a3b94d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.collocations import BigramCollocationFinder, TrigramCollocationFinder\n",
+    "from nltk.metrics import BigramAssocMeasures, TrigramAssocMeasures\n",
+    "\n",
+    "finder = BigramCollocationFinder.from_words(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "18c096e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigram_freq = finder.ngram_fd\n",
+    "sorted_freq = sorted(bigram_freq.items(), key=lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2f9c0dcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('chat', 'gpt') 752\n",
+      "('dont', 'know') 590\n",
+      "('dont', 'think') 529\n",
+      "('good', 'bot') 510\n",
+      "('im', 'sure') 491\n",
+      "('language', 'model') 449\n",
+      "('bot', 'good') 434\n",
+      "('gon', 'na') 383\n",
+      "('use', 'chatgpt') 372\n",
+      "('using', 'chatgpt') 336\n",
+      "('use', 'ai') 320\n",
+      "('make', 'sure') 301\n",
+      "('seems', 'like') 299\n",
+      "('using', 'ai') 286\n",
+      "('something', 'like') 272\n",
+      "('sounds', 'like') 263\n",
+      "('writing', 'style') 252\n",
+      "('many', 'people') 252\n",
+      "('training', 'data') 248\n",
+      "('smart', 'robot') 248\n",
+      "('feel', 'like') 243\n",
+      "('years', 'ago') 243\n",
+      "('ai', 'language') 240\n",
+      "('things', 'like') 239\n",
+      "('pretty', 'much') 235\n",
+      "('people', 'dont') 223\n",
+      "('dont', 'want') 221\n",
+      "('robot', 'response') 215\n",
+      "('response', 'automatic') 215\n",
+      "('open', 'source') 213\n",
+      "('ai', 'generated') 201\n",
+      "('much', 'better') 201\n",
+      "('automatic', 'thanks') 190\n",
+      "('dont', 'see') 186\n",
+      "('dont', 'need') 182\n",
+      "('chatgpt', 'write') 182\n",
+      "('dont', 'understand') 182\n",
+      "('looks', 'like') 179\n",
+      "('mental', 'health') 176\n",
+      "('heres', 'think') 171\n",
+      "('high', 'school') 165\n",
+      "('like', 'chatgpt') 160\n",
+      "('sound', 'like') 154\n",
+      "('social', 'media') 154\n",
+      "('ive', 'seen') 154\n",
+      "('used', 'chatgpt') 153\n",
+      "('ask', 'chatgpt') 152\n",
+      "('language', 'models') 152\n",
+      "('good', 'luck') 152\n",
+      "('really', 'good') 152\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 50\n",
+    "for ngram, freq in sorted_freq[:N]:\n",
+    "    print(ngram, freq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc6ab271",
+   "metadata": {},
+   "source": [
+    "## Trigrams distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8bdf39ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finder = TrigramCollocationFinder.from_words(tokens)\n",
+    "trigram_freq = finder.ngram_fd\n",
+    "sorted_freq = sorted(trigram_freq.items(), key=lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0254878b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('bot', 'good', 'bot') 431\n",
+      "('good', 'bot', 'good') 429\n",
+      "('smart', 'robot', 'response') 215\n",
+      "('robot', 'response', 'automatic') 215\n",
+      "('ai', 'language', 'model') 201\n",
+      "('response', 'automatic', 'thanks') 190\n",
+      "('bot', 'action', 'performed') 113\n",
+      "('action', 'performed', 'automatically') 113\n",
+      "('please', 'contact', 'moderators') 110\n",
+      "('performed', 'automatically', 'please') 109\n",
+      "('automatically', 'please', 'contact') 109\n",
+      "('heres', 'think', 'based') 109\n",
+      "('think', 'based', 'comments') 105\n",
+      "('im', 'pretty', 'sure') 78\n",
+      "('large', 'language', 'model') 77\n",
+      "('contact', 'moderators', 'subredditmessagecomposetorchatgpt') 76\n",
+      "('moderators', 'subredditmessagecomposetorchatgpt', 'questions') 76\n",
+      "('subredditmessagecomposetorchatgpt', 'questions', 'concerns') 76\n",
+      "('based', 'comments', 'seems') 73\n",
+      "('free', 'chatgpt', 'bot') 71\n",
+      "('chatgpt', 'bot', 'open') 71\n",
+      "('bot', 'open', 'assistant') 71\n",
+      "('open', 'assistant', 'bot') 71\n",
+      "('assistant', 'bot', 'opensource') 71\n",
+      "('bot', 'opensource', 'model') 71\n",
+      "('opensource', 'model', 'ai') 71\n",
+      "('model', 'ai', 'image') 71\n",
+      "('ai', 'image', 'generator') 71\n",
+      "('image', 'generator', 'bot') 71\n",
+      "('bot', 'perplexity', 'ai') 71\n",
+      "('perplexity', 'ai', 'bot') 71\n",
+      "('psa', 'chatgptrelated', 'issues') 71\n",
+      "('chatgptrelated', 'issues', 'email') 71\n",
+      "('issues', 'email', 'supportopenaicom') 71\n",
+      "('prompt', 'used', 'generate') 70\n",
+      "('used', 'generate', 'output') 69\n",
+      "('generate', 'output', 'post') 69\n",
+      "('generator', 'bot', 'perplexity') 69\n",
+      "('gpt', 'bot', 'visual') 69\n",
+      "('respond', 'comment', 'prompt') 68\n",
+      "('comment', 'prompt', 'used') 68\n",
+      "('ignore', 'comment', 'post') 68\n",
+      "('comment', 'post', 'doesnt') 68\n",
+      "('post', 'doesnt', 'prompt') 68\n",
+      "('public', 'discord', 'serverhttpsdiscordggrchatgpt') 68\n",
+      "('discord', 'serverhttpsdiscordggrchatgpt', 'theres') 68\n",
+      "('serverhttpsdiscordggrchatgpt', 'theres', 'free') 68\n",
+      "('theres', 'free', 'chatgpt') 68\n",
+      "('ai', 'bot', 'xf') 68\n",
+      "('bot', 'xf', 'gpt') 68\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 50\n",
+    "for ngram, freq in sorted_freq[:N]:\n",
+    "    print(ngram, freq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afa73295",
+   "metadata": {},
+   "source": [
+    "Main reasons we can deduce from the above list of trigraphs are: **good bot**, **smart robot response**, **it has a large language model**, **it's free and open (open source)**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66f74407",
+   "metadata": {},
+   "source": [
+    "# Words, bigrams and trigrams distribution for negative comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a6b39041",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df_copy\n",
+    "df = df[df['Sentiment'] == 'neg']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dcf7a4e",
+   "metadata": {},
+   "source": [
+    "## Words frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "29a98f12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk import FreqDist\n",
+    "\n",
+    "tokens = []\n",
+    "for row in df['Comment']:\n",
+    "    tokens.extend(word_tokenize(str(row).lower()))  # Tokenization and lower conversion of the strings\n",
+    "\n",
+    "word_freq = FreqDist(tokens)\n",
+    "sorted_freq = sorted(word_freq.items(), key = lambda x: x[1], reverse = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1dd84757",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ai 3025\n",
+      "like 2601\n",
+      "chatgpt 2256\n",
+      "people 2144\n",
+      "dont 1908\n",
+      "would 1705\n",
+      "im 1649\n",
+      "get 1446\n",
+      "use 1320\n",
+      "one 1301\n",
+      "think 1241\n",
+      "even 1239\n",
+      "time 1163\n",
+      "know 1134\n",
+      "thats 1065\n",
+      "make 1025\n",
+      "wrong 997\n",
+      "work 974\n",
+      "also 946\n",
+      "something 945\n",
+      "youre 929\n",
+      "bad 912\n",
+      "using 910\n",
+      "mean 881\n",
+      "gpt 862\n",
+      "could 856\n",
+      "way 851\n",
+      "shit 842\n",
+      "write 815\n",
+      "going 809\n",
+      "doesnt 806\n",
+      "cant 792\n",
+      "really 777\n",
+      "things 754\n",
+      "want 752\n",
+      "see 734\n",
+      "fucking 731\n",
+      "say 728\n",
+      "need 728\n",
+      "actually 685\n",
+      "used 678\n",
+      "well 676\n",
+      "thing 661\n",
+      "still 654\n",
+      "go 589\n",
+      "anything 575\n",
+      "human 573\n",
+      "much 567\n",
+      "writing 566\n",
+      "us 565\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 50  # number of frequent words to print\n",
+    "for word, freq in sorted_freq[:N]:\n",
+    "    print(word, freq) # Bigrams distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f25aeb9",
+   "metadata": {},
+   "source": [
+    "## Bigrams distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a9b8710c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.collocations import BigramCollocationFinder, TrigramCollocationFinder\n",
+    "from nltk.metrics import BigramAssocMeasures, TrigramAssocMeasures\n",
+    "\n",
+    "finder = BigramCollocationFinder.from_words(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d98d875d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigram_freq = finder.ngram_fd\n",
+    "sorted_freq = sorted(bigram_freq.items(), key=lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e342be48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('chat', 'gpt') 270\n",
+      "('dont', 'know') 220\n",
+      "('gon', 'na') 173\n",
+      "('dont', 'think') 151\n",
+      "('language', 'model') 148\n",
+      "('im', 'sorry') 144\n",
+      "('use', 'chatgpt') 130\n",
+      "('sounds', 'like') 128\n",
+      "('using', 'chatgpt') 122\n",
+      "('using', 'ai') 110\n",
+      "('doesnt', 'mean') 108\n",
+      "('ai', 'generated') 107\n",
+      "('feel', 'like') 104\n",
+      "('use', 'ai') 103\n",
+      "('dont', 'get') 103\n",
+      "('dont', 'understand') 97\n",
+      "('something', 'like') 87\n",
+      "('years', 'ago') 86\n",
+      "('random', 'number') 85\n",
+      "('wan', 'na') 82\n",
+      "('dont', 'want') 82\n",
+      "('training', 'data') 81\n",
+      "('seems', 'like') 77\n",
+      "('artificial', 'intelligence') 74\n",
+      "('ai', 'language') 73\n",
+      "('dont', 'see') 71\n",
+      "('people', 'dont') 71\n",
+      "('im', 'saying') 70\n",
+      "('things', 'like') 70\n",
+      "('every', 'single') 69\n",
+      "('looks', 'like') 69\n",
+      "('ai', 'detection') 65\n",
+      "('sorry', 'loss') 65\n",
+      "('written', 'ai') 59\n",
+      "('ive', 'seen') 59\n",
+      "('chatgpt', 'write') 58\n",
+      "('mental', 'health') 58\n",
+      "('look', 'like') 55\n",
+      "('im', 'really') 55\n",
+      "('lot', 'people') 53\n",
+      "('black', 'mirror') 53\n",
+      "('search', 'engine') 52\n",
+      "('false', 'positives') 51\n",
+      "('dont', 'need') 51\n",
+      "('im', 'talking') 50\n",
+      "('used', 'chatgpt') 48\n",
+      "('long', 'time') 48\n",
+      "('ai', 'detectors') 47\n",
+      "('ai', 'write') 47\n",
+      "('every', 'time') 46\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 50\n",
+    "for ngram, freq in sorted_freq[:N]:\n",
+    "    print(ngram, freq) # Trigrams distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef8e1b0d",
+   "metadata": {},
+   "source": [
+    "## Trigrams distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "71d737f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finder = TrigramCollocationFinder.from_words(tokens)\n",
+    "trigram_freq = finder.ngram_fd\n",
+    "sorted_freq = sorted(trigram_freq.items(), key=lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5e38300f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('ai', 'language', 'model') 67\n",
+      "('im', 'really', 'sorry') 43\n",
+      "('really', 'sorry', 'replying') 40\n",
+      "('sorry', 'replying', 'late') 40\n",
+      "('replying', 'late', 'theres') 40\n",
+      "('late', 'theres', 'detailed') 40\n",
+      "('theres', 'detailed', 'post') 40\n",
+      "('detailed', 'post', 'herehttpswwwredditcomrremindmebotcommentsjostqremindmebot_is_now_replying_to_comments_again') 40\n",
+      "('post', 'herehttpswwwredditcomrremindmebotcommentsjostqremindmebot_is_now_replying_to_comments_again', 'messaging') 40\n",
+      "('send', 'pm', 'also') 40\n",
+      "('pm', 'also', 'reminded') 40\n",
+      "('also', 'reminded', 'reduce') 40\n",
+      "('reminded', 'reduce', 'spam') 40\n",
+      "('reduce', 'spam', 'parent') 40\n",
+      "('spam', 'parent', 'commenter') 40\n",
+      "('parent', 'commenter', 'delete') 40\n",
+      "('commenter', 'delete', 'message') 40\n",
+      "('delete', 'message', 'hide') 40\n",
+      "('bot', 'action', 'performed') 35\n",
+      "('action', 'performed', 'automatically') 35\n",
+      "('herehttpswwwredditcomrremindmebotcommentsjostqremindmebot_is_now_replying_to_comments_again', 'messaging', 'utchttpwwwwolframalphacominputiutctolocaltime') 35\n",
+      "('messaging', 'utchttpwwwwolframalphacominputiutctolocaltime', 'remind') 35\n",
+      "('message', 'hide', 'othershttpswwwredditcommessagecomposetoremindmebotsubjectdeletecommentmessagedeletevm') 33\n",
+      "('hide', 'othershttpswwwredditcommessagecomposetoremindmebotsubjectdeletecommentmessagedeletevm', 'infohttpswwwredditcomrremindmebotcommentsebkoremindmebot_info_vcustomhttpswwwredditcommessagecomposetoremindmebotsubjectremindermessageblinkormessageinsidesquarebracketsdaaremindmetimeperiodhereyour') 33\n",
+      "('othershttpswwwredditcommessagecomposetoremindmebotsubjectdeletecommentmessagedeletevm', 'infohttpswwwredditcomrremindmebotcommentsebkoremindmebot_info_vcustomhttpswwwredditcommessagecomposetoremindmebotsubjectremindermessageblinkormessageinsidesquarebracketsdaaremindmetimeperiodhereyour', 'remindershttpswwwredditcommessagecomposetoremindmebotsubjectlistofremindersmessagemyremindersfeedbackhttpswwwredditcommessagecomposetowatchfulsubjectremindmebotfeedback') 33\n",
+      "('done', 'error', 'please') 32\n",
+      "('error', 'please', 'message') 32\n",
+      "('please', 'message', 'moderatorshttpswwwredditcommessagecomposetorchatgpt') 32\n",
+      "('message', 'moderatorshttpswwwredditcommessagecomposetorchatgpt', 'bot') 32\n",
+      "('moderatorshttpswwwredditcommessagecomposetorchatgpt', 'bot', 'action') 32\n",
+      "('performed', 'automatically', 'please') 24\n",
+      "('automatically', 'please', 'contact') 23\n",
+      "('please', 'contact', 'moderators') 23\n",
+      "('infohttpswwwredditcomrremindmebotcommentsebkoremindmebot_info_vcustomhttpswwwredditcommessagecomposetoremindmebotsubjectremindermessageblinkormessageinsidesquarebracketsdaaremindmetimeperiodhereyour', 'remindershttpswwwredditcommessagecomposetoremindmebotsubjectlistofremindersmessagemyremindersfeedbackhttpswwwredditcommessagecomposetowatchfulsubjectremindmebotfeedback', 'im') 23\n",
+      "('remindershttpswwwredditcommessagecomposetoremindmebotsubjectlistofremindersmessagemyremindersfeedbackhttpswwwredditcommessagecomposetowatchfulsubjectremindmebotfeedback', 'im', 'really') 23\n",
+      "('random', 'number', 'generator') 22\n",
+      "('das', 'kommt', 'mir') 22\n",
+      "('im', 'gon', 'na') 21\n",
+      "('use', 'chat', 'gpt') 21\n",
+      "('post', 'removed', 'hate') 21\n",
+      "('removed', 'hate', 'speech') 21\n",
+      "('hate', 'speech', 'threatening') 21\n",
+      "('speech', 'threatening', 'content') 21\n",
+      "('threatening', 'content', 'determined') 21\n",
+      "('content', 'determined', 'openai') 21\n",
+      "('determined', 'openai', 'moderation') 21\n",
+      "('openai', 'moderation', 'toolkithttpsplatformopenaicomdocsguidesmoderation') 21\n",
+      "('moderation', 'toolkithttpsplatformopenaicomdocsguidesmoderation', 'feel') 21\n",
+      "('toolkithttpsplatformopenaicomdocsguidesmoderation', 'feel', 'done') 21\n",
+      "('feel', 'done', 'error') 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 50\n",
+    "for ngram, freq in sorted_freq[:N]:\n",
+    "    print(ngram, freq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6257d4a4",
+   "metadata": {},
+   "source": [
+    "Main reasons we can deduce from the above list of trigraphs are: **boh**."
+   ]
   }
  ],
  "metadata": {
