--- a/Notebook/Sentiment analysis-Ngrams-Claudio-Martina.ipynb
+++ b/Notebook/Sentiment analysis-Ngrams-Claudio-Martina.ipynb
@@ -1187,7 +1187,7 @@
    "id": "afa73295",
    "metadata": {},
    "source": [
-    "Main reasons we can deduce from the above list of trigraphs are: "
+    "Main reasons we can deduce from the above list of trigraphs are: **AI potential (as investment for the future technology)**, **it outperforms physicians (?)**."
    ]
   },
   {
@@ -2173,16 +2173,8 @@
    "id": "6257d4a4",
    "metadata": {},
    "source": [
-    "Main reasons we can deduce from the above list of trigraphs are: **boh**."
+    "Main reasons we can deduce from the above list of trigraphs are: **AGCOM case in Italy for privacy issues**, **data privacy** and **AI development regulation**."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d2710fb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2201,7 +2193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
